# ARampers

./: .gitmodules  BUILDING.md  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AmpModule.cpp  AmpModule.h  DriveModule.cpp  DriveModule.h  EQModule.cpp  EQModule.h  GainModule.cpp  GainModule.h  IRModule.cpp  IRModule.h  Module.h  NoiseGateModule.cpp  NoiseGateModule.h  PedalboardProcessor.cpp  PedalboardProcessor.h
Source/UI/: IRLoaderComponent.cpp  IRLoaderComponent.h  PedalModuleComponent.cpp  PedalModuleComponent.h  PresetBarComponent.cpp  PresetBarComponent.h
